@@ -18,6 +18,8 @@ h3. 0.6.1 unreleased
 * add 'Modern Business' theme from startbootstrap.com
 * add 'Simple Sidebar' theme from startbootstrap.com
 * add 'Stylish Portfolio' theme from startbootstrap.com
+* add 'Portfolio Item' theme from startbootstrap.com
+* add 'Business Casual' theme from startbootstrap.com
 
 h3. 0.6.0 May 10, 2015
 
